k8s/environments/zipkin/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-ingress
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    env: production
    tier: cicd
    app: zipkin
    name: zipkin-ingress
spec:
  rules:
#    - host: <Zipkin 도메인> # TODO
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
